--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portifolio",
   "version": "0.1.0",
-  "homepage": "https://{petercastle2020}.github.io",
+  "homepage": "https://petercastle2020.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
